# Stock-Trend-Analyzer

./: .gitignore  README.md  pyproject.toml
notebooks/: stock_analysis.ipynb
